[gd_scene load_steps=13 format=3 uid="uid://cofsiww4jdm6b"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_r8yo1"]
[ext_resource type="AudioStream" uid="uid://d04xdytcvwqug" path="res://assets/12_human_jump_1.wav" id="2_17fj4"]
[ext_resource type="PackedScene" uid="uid://bsocuc8jadvn" path="res://scenes/game/background.tscn" id="2_pvsrb"]
[ext_resource type="AudioStream" uid="uid://dhilfcdk4g3vp" path="res://assets/12_human_jump_2.wav" id="3_wksd7"]
[ext_resource type="AudioStream" uid="uid://d4mq1exyjpfo1" path="res://assets/12_human_jump_3.wav" id="4_tenlk"]
[ext_resource type="AudioStream" uid="uid://cc024dkc7stl" path="res://assets/13_human_jump_land_1.wav" id="5_qpa78"]
[ext_resource type="AudioStream" uid="uid://85sgj68dhqq8" path="res://assets/13_human_jump_land_2.wav" id="6_khfyv"]
[ext_resource type="PackedScene" uid="uid://xt2oa6se6tcm" path="res://scenes/menu/black_screen.tscn" id="8_hdeio"]

[sub_resource type="Gradient" id="Gradient_ygnk8"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j8g6o"]
gradient = SubResource("Gradient_ygnk8")
width = 16
height = 24

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_j3bej"]
cull_mode = 1
polygon = PackedVector2Array(-8, -12, 8, -12, 8, 12, -8, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ic864"]
size = Vector2(16, 24)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_r8yo1")
move_speed = 200.0
move_acceleration = 0.2
jump_height = 68.0
jump_double_height = 36.0
jump_variable_height = 24.0
jump_time_to_peak = 0.36
jump_double_time_to_peak = 0.2
jump_time_to_descent = 0.3
jump_buffer_time = 0.1
jump_coyote_time = 0.08
jump_sounds = Array[AudioStreamWAV]([ExtResource("2_17fj4"), ExtResource("3_wksd7"), ExtResource("4_tenlk")])
on_floor_sounds = Array[AudioStreamWAV]([ExtResource("5_qpa78"), ExtResource("6_khfyv")])

[node name="Background" parent="." instance=ExtResource("2_pvsrb")]
centered = true

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2000
texture = SubResource("GradientTexture2D_j8g6o")

[node name="JumpBufferTimer" type="Timer" parent="."]
one_shot = true

[node name="JumpCoyoteTimer" type="Timer" parent="."]
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_j3bej")

[node name="JumpAudioPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="OnFloorAudioPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -6.966
bus = &"SFX"

[node name="BlackScreen" parent="." instance=ExtResource("8_hdeio")]
centered = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ic864")

[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_jump_buffer_timer_timeout"]
[connection signal="timeout" from="JumpCoyoteTimer" to="." method="_on_jump_coyote_timer_timeout"]
